--- a/package.json
+++ b/package.json
@@ -16,6 +16,11 @@
     "serve": "11.2.0"
   },
   "dependencies": {
-    "express": "^5.1.0"
+    "connect-ensure-login": "^0.1.1",
+    "express": "^5.1.0",
+    "express-session": "^1.18.2",
+    "mongoose": "^9.0.0",
+    "passport": "^0.7.0",
+    "passport-local-mongoose": "^8.0.0"
   }
 }
