--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "connect-ensure-login": "^0.1.1",
     "express": "^5.1.0",
     "express-session": "^1.18.2",
-    "mongoose": "^9.0.0",
+    "mongoose": "7",
     "passport": "^0.7.0",
     "passport-local-mongoose": "^8.0.0"
   }
