--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "server.js is now handling routing",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "nodemon server.js"
   },
   "keywords": [
     "html",
@@ -20,6 +20,7 @@
     "express": "^5.1.0",
     "express-session": "^1.18.2",
     "mongoose": "7",
+    "nodemon": "^3.1.11",
     "passport": "^0.7.0",
     "passport-local-mongoose": "^8.0.0"
   }
